--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@
     margin-left: 5%;
     margin-right: 5%;
     padding-top: 15vh;
+    position: sticky;
 }
 .hero1{
     font-size: 26px;
@@ -136,6 +137,7 @@
     margin-right: 2vw;
     width: 80vw;
     margin-left: 5vw;
+    position: sticky;
 }
 .card1_img{
     width: 40vw;
@@ -172,6 +174,7 @@
     width: 90vw;
     margin-left: 5vw;
     margin-top: 5%;
+    position: sticky;
 }
 .grid2{
     display: grid;
@@ -179,6 +182,7 @@
     grid-gap: 1%;
     width: 90vw;
     margin-left: 5vw;
+    position: sticky;
 }
 .grid3{
     display: grid;
@@ -186,6 +190,7 @@
     grid-gap: 1%;
     width: 90vw;
     margin-left: 5vw;
+    position: sticky;
 }
 .grid4{
     display: grid;
@@ -193,6 +198,7 @@
     grid-gap: 1%;
     width: 90vw;
     margin-left: 5vw;
+    position: sticky;
 }
 
 .grid1_image{
@@ -222,6 +228,7 @@
     align-content: center;
     font-size: 22px;
     margin-left: 5%;
+    position: sticky;
 }
 .do1{
     font-size: 7vh;
@@ -246,6 +253,7 @@
         grid-template-columns: 1fr 1fr;
         margin-left: 5%;
         margin-right: 5%;
+        position: sticky;
  }
  .ready{
     color: #2084d9;
@@ -292,11 +300,13 @@
     background: #f2f2f2;
     padding: 20px;
     margin-left: 6%;
+    position: sticky;
 }
 .discover_text{
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
+    position: sticky;
 }
 .who_we_are{
     background-image: url('images/FINE\ GIRL.jpg');
@@ -307,6 +317,20 @@
     width: 100%;
     margin-top: 3%;
     margin-bottom: 3%;
+}
+.know_us2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    grid-gap: 3vw;
+    margin-left: 10vw;
+    padding-top: 2vh;
+    padding-bottom: 3vh;
+}
+.know_us2_text{
+    font-size: 4vh;
+    font-weight: bolder;
+
 }
 .boy_and_girl{
     background: pink;
@@ -337,6 +361,7 @@
     grid-template-columns: 1fr 1fr;
     width: 80%;
     margin-left: 10%;
+    position: sticky;
 }
 .you_deserve{
     color: #FB637E;
@@ -370,12 +395,14 @@
     display: grid;
     grid-template-columns: 2fr 0.5fr;
     padding-top: 3%;
+    position: sticky;
 }
 .footer_part1{
     display: grid;
     grid-template-columns: 0.6fr 0.6fr 0.6fr 0.6fr;
     width: 70%;
     margin-left: 7vw;
+    position: sticky;
 }
 .services ul{
     list-style-type: none;
@@ -395,11 +422,13 @@
 .brand1{
     display: grid;
     grid-template-columns: 1fr 3fr;
+    position: sticky;
 }
 .opera_brand_text{
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
+    position: sticky;
 }
 .brand_text{
     color: #b3b3b3;
